--- a/Artes.html
+++ b/Artes.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste Deploy</title>
+    <title>Artes de Rua</title>
+    <link rel="stylesheet" href="artes.css">
 </head>
 <body>
     <header>
-        <span>
-            <img src="" alt="">
-            <h1>Title Header</h1>
-        </span>
-        <div>
-            <h1></h1>
-            <h1></h1>
-            <h1></h1>
-            <h1></h1>
-        </div>
+        <img src="src/img/image 1 (1).png" alt="">
+        <a class="titulo" href="">Artes De Rua</a>
+        
     </header>
+    <nav>
+        <a href="">Home</a>
+        <a href="">Exposições</a>
+        <a href="">Artistas</a>
+        <a href="">Contato</a>
+    </nav>
+    <main>
+
+    </main>
+
 </body>
 </html>
