--- a/Artes.html
+++ b/Artes.html
@@ -22,7 +22,25 @@
         <a href="">Contato</a>
     </nav>
     <main>
-
+        <img src="src/img/image 2.png" alt="">
+        <h3>Um movimento silencioso e <br> transgressor ganha as ruas e os <br> prédios de uma grande metrópole. É o <br> Pixo. É Arte.
+           <br> <br> O Pixo é um código de contestação <br> que se impõe ao tecido da cidade <br> concretizando e estandardizando a <br> fala do outro, a presença do excluído, <br> o grito do oprimido, a letra, a poesia, a <br> imagem do artista.
+            <br> <br> A pixação é uma cultura que tem <br> como produto final a escrita grafada <br> nas paredes das grandes cidades. <br> Desenvolvido em São Paulo, o <br> Movimento Pixo possui organização <br> social e simbólica que promove <br> disputas visuais no cenário urbano e <br> interligações entre grupos de <br> pixadores.
+        </h3>
+        <h3 class="pt2">
+            O "pixo" se originou no Brasil principalmente na cidade de São Paulo. O termo "pixo" é uma abreviação de "pixação", que se refere à prática de criar inscrições e desenhos em espaços públicos, muitas vezes de forma ilegal, usando tinta spray ou marcadores. Embora não haja uma data específica de surgimento do pixo, essa forma de expressão urbana começou a se desenvolver nas décadas de 1970 e 1980, em particular nos bairros periféricos de São Paulo.
+            <br> <br>
+            O pixo é frequentemente associado a jovens de comunidades marginalizadas e é considerado uma forma de protesto e expressão artística que surgiu em um contexto de desigualdade social e econômica. Os pixadores costumam usar letras estilizadas e símbolos em seus trabalhos, e a prática é muitas vezes controversa, pois envolve a vandalização de propriedade pública e privada
+            <br> <br>
+            Embora o pixo seja muitas vezes considerado como uma forma de vandalismo, também é reconhecido por seu impacto cultural e artístico, e alguns artistas que começaram no pixo conseguiram ganhar reconhecimento na cena da arte contemporânea.
+        </h3>
+        
+        <img class="exposicoes" src="src/img/exposicoes 1.png" alt="">
+        <h1 class="exposicaolixomania">Exposição LixoMania</h1>
+        <img class="LixoMania" src="src/img/387760767_18239694502175816_4786547676822431656_n 1.png" alt="">
+        <h3 class="pt3">Recentemente Lixomania (Zé)
+            fez uma exposição em colaboração com o cclapa
+            A exposição, intitulada “35 anos de Lixomania”</h3>
     </main>
 
 </body>
