--- a/Artes.html
+++ b/Artes.html
@@ -63,6 +63,17 @@
             <br> <br>
             Na exposição, criou-se uma experiência única para que o visitante conheça mais de <br> perto obras de grafiteiros que, aqui, são protagonistas, além de ver os recortes <br> históricos em uma linha do tempo que apresenta a riqueza desta arte que vem das ruas e <br> que surgiu como forma de protesto e com o objetivo de ser democrática e acessível,<br> tendo uma trajetória independente e singular.</h3>
     </main>
-
+    <footer>
+        <div class="Sobre">
+    <a href="">Sobre</a>
+    <a href="">Contato</a>
+    <a href="">Fale Contato</a>
+    </div>
+   <!-- <div class="icons">
+    <img src="src/img/🦆 icon _What's App_.svg" alt="Whatsapp">
+    <img src="src/img/🦆 icon _Facebook Square_.svg" alt="Facebook">
+    <img src="src/img/🦆 icon _Instagram_.svg" alt="Instagram">
+    </div> -->
+</footer>
 </body>
 </html>
