--- a/Artes.html
+++ b/Artes.html
@@ -23,7 +23,7 @@
     </nav>
     <main>
         <img src="src/img/image 2.png" alt="">
-        <h3>Um movimento silencioso e <br> transgressor ganha as ruas e os <br> prédios de uma grande metrópole. É o <br> Pixo. É Arte.
+        <h3 class="pt1">Um movimento silencioso e <br> transgressor ganha as ruas e os <br> prédios de uma grande metrópole. É o <br> Pixo. É Arte.
            <br> <br> O Pixo é um código de contestação <br> que se impõe ao tecido da cidade <br> concretizando e estandardizando a <br> fala do outro, a presença do excluído, <br> o grito do oprimido, a letra, a poesia, a <br> imagem do artista.
             <br> <br> A pixação é uma cultura que tem <br> como produto final a escrita grafada <br> nas paredes das grandes cidades. <br> Desenvolvido em São Paulo, o <br> Movimento Pixo possui organização <br> social e simbólica que promove <br> disputas visuais no cenário urbano e <br> interligações entre grupos de <br> pixadores.
         </h3>
@@ -55,25 +55,27 @@
         
         <h1 class="itautittle">Itaú Cultural</h1>
          <div class="itau">   
-        <img class="itauimg" src="src/img/345538008_5871305212979685_3736701192176921361_n 1.png" alt="">         
-        <img class="itauimg2" src="src/img/image 9.png" alt="">
+            <img class="itauimg" src="src/img/345538008_5871305212979685_3736701192176921361_n 1.png" alt="">         
+            <img class="itauimg2" src="src/img/image 9.png" alt="">
         </div>
 
-        <h3 class="itautext" >O Itaú Cultural apresenta gratuitamente a exposição Além das ruas: histórias do graffiti,<br> que traz um grupo de artistas que representam partes diferentes da história da arte urbana,<br> desde sua origem, suas vertentes e com técnicas diversas. Com curadoria de <br> Binho Ribeiro, a mostra resgata a trajetória dessa manifestação, passando pelos <br> movimentos de contracultura nos Estados Unidos e na Europa, sua internacionalização,<br> até a diversidade da cena atual no Brasil.
+        <h3 class="itautext">O Itaú Cultural apresenta gratuitamente a exposição Além das ruas: histórias do graffiti,<br> que traz um grupo de artistas que representam partes diferentes da história da arte urbana,<br> desde sua origem, suas vertentes e com técnicas diversas. Com curadoria de <br> Binho Ribeiro, a mostra resgata a trajetória dessa manifestação, passando pelos <br> movimentos de contracultura nos Estados Unidos e na Europa, sua internacionalização,<br> até a diversidade da cena atual no Brasil.
             <br> <br>
-            Na exposição, criou-se uma experiência única para que o visitante conheça mais de <br> perto obras de grafiteiros que, aqui, são protagonistas, além de ver os recortes <br> históricos em uma linha do tempo que apresenta a riqueza desta arte que vem das ruas e <br> que surgiu como forma de protesto e com o objetivo de ser democrática e acessível,<br> tendo uma trajetória independente e singular.</h3>
+            Na exposição, criou-se uma experiência única para que o visitante conheça mais de <br> perto obras de grafiteiros que, aqui, são protagonistas, além de ver os recortes <br> históricos em uma linha do tempo que apresenta a riqueza desta arte que vem das ruas e <br> que surgiu como forma de protesto e com o objetivo de ser democrática e acessível,<br> tendo uma trajetória independente e singular.
+        </h3>
     </main>
+    
     <footer>
-        <div class="Sobre">
-    <a href="">Sobre</a>
-    <a href="">Contato</a>
-    <a href="">Fale Contato</a>
-    </div>
-   <!-- <div class="icons">
-    <img src="src/img/🦆 icon _What's App_.svg" alt="Whatsapp">
-    <img src="src/img/🦆 icon _Facebook Square_.svg" alt="Facebook">
-    <img src="src/img/🦆 icon _Instagram_.svg" alt="Instagram">
-    </div> -->
-</footer>
+        <div>
+            <a href="">Sobre</a>
+            <a href="">Contato</a>
+            <a href="">Fale Conosco</a>            
+        </div>
+        <!-- <div class="icons"> -->
+            <!-- <img src="src/img/🦆 icon _What's App_.svg" alt=""> -->
+            <!-- <img src="src/img/🦆 icon _Instagram_.svg" alt=""> -->
+            <!-- <img src="src/img/🦆 icon _Facebook Square_.svg" alt=""> -->
+        </div>
+    </footer>
 </body>
 </html>
