--- a/Artes.html
+++ b/Artes.html
@@ -22,7 +22,7 @@
         <a href="">Contato</a>
     </nav>
     <main>
-        <img src="src/img/image 2.png" alt="">
+        <img class="pixo" src="src/img/image 2.png" alt="">
         <h3 class="pt1">Um movimento silencioso e <br> transgressor ganha as ruas e os <br> prédios de uma grande metrópole. É o <br> Pixo. É Arte.
            <br> <br> O Pixo é um código de contestação <br> que se impõe ao tecido da cidade <br> concretizando e estandardizando a <br> fala do outro, a presença do excluído, <br> o grito do oprimido, a letra, a poesia, a <br> imagem do artista.
             <br> <br> A pixação é uma cultura que tem <br> como produto final a escrita grafada <br> nas paredes das grandes cidades. <br> Desenvolvido em São Paulo, o <br> Movimento Pixo possui organização <br> social e simbólica que promove <br> disputas visuais no cenário urbano e <br> interligações entre grupos de <br> pixadores.
@@ -66,15 +66,15 @@
     </main>
     
     <footer>
-        <div>
+        <div class="sobre">
             <a href="">Sobre</a>
             <a href="">Contato</a>
             <a href="">Fale Conosco</a>            
         </div>
-        <!-- <div class="icons"> -->
-            <!-- <img src="src/img/🦆 icon _What's App_.svg" alt=""> -->
-            <!-- <img src="src/img/🦆 icon _Instagram_.svg" alt=""> -->
-            <!-- <img src="src/img/🦆 icon _Facebook Square_.svg" alt=""> -->
+        <div class="icons">
+            <img src="src/img/🦆 icon _What's App_.svg" alt="">
+            <img src="src/img/🦆 icon _Instagram_.svg" alt="">
+            <img src="src/img/🦆 icon _Facebook Square_.svg" alt="">
         </div>
     </footer>
 </body>
