--- a/src/pages/artistas.html
+++ b/src/pages/artistas.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artes de Rua</title>
-    <link rel="stylesheet" href="Artistas.css">
+    <link rel="stylesheet" href="artistas.css">
 </head>
 <body>
     <header>
        
         <div class="backgroundimg">
-            <a class="titulo" href="Artes.html">Artes De Rua</a>
+            <a class="titulo" href="../../index.html">Artes De Rua</a>
         </div>
  
     </header>
     <nav>
-        <a href="Artes.html">Home</a>
+        <a href="../../index.html">Home</a>
         <a href="">Exposicoes</a>
         <a href="">Artistas</a>
         <a href="">Contato</a>
