refactor: adjustment in repo

--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artes de Rua</title>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./src/index.css" />
   </head>
   <body>
     <header>
@@ -19,7 +19,7 @@
       <a href="">Contato</a>
     </nav>
     <main>
-      <img class="pixo" src="src/img/image 2.png" alt="" />
+      <img class="pixo" src="./src/img/image 2.png" alt="" />
       <h3 class="pt1">
         Um movimento silencioso e <br />
         transgressor ganha as ruas e os <br />
@@ -74,7 +74,7 @@
       <div class="formatImage">
         <img
           class="LixoMania"
-          src="src/img/387760767_18239694502175816_4786547676822431656_n 1.png"
+          src="./src/img/387760767_18239694502175816_4786547676822431656_n 1.png"
           alt=""
         />
         <h3 class="pt3">
