--- a/src/pages/artistas.html
+++ b/src/pages/artistas.html
@@ -1,40 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artes de Rua</title>
-    <link rel="stylesheet" href="artistas.css">
-</head>
-<body>
+    <link rel="stylesheet" href="artistas.css" />
+  </head>
+  <body>
     <header>
-       
-        <div class="backgroundimg">
-            <a class="titulo" href="../../index.html">Artes De Rua</a>
-        </div>
- 
+      <div class="backgroundimg">
+        <a class="titulo" href="../../index.html">Artes De Rua</a>
+      </div>
     </header>
     <nav>
-        <a href="../../index.html">Home</a>
-        <a href="">Exposicoes</a>
-        <a href="">Artistas</a>
-        <a href="">Contato</a>
+      <a href="../../index.html">Home</a>
+      <a href="">Exposicoes</a>
+      <a href="">Artistas</a>
+      <a href="">Contato</a>
     </nav>
     <main>
-        <img class="lixomaniapixo" src="src/img/336845502_206250962045646_220132070252742342_n 1.png" alt="">
-        <div class="description">
-            <h1 class="titulolixomania">LIXO MANIA (ZÉ)</h1>
-            <h3 class="descriçaolixomania">atualmente lixomania fez uma <br> exposição em colaboração <br> com o cclapa <br>
-                A exposição, intitulada “35 <br> anos de Lixomania”, apresenta <br> um olhar aprofundado sobre <br> essa trajetória, explorando <br> minha evolucão, vivências, <br> estilo e técnica. Estarão <br> expostos quase 40 anos de <br>
-                imagens e arquivos, além de <br> uma série de obras que <br> capturam a essência crua <br> dessa caminhada, <br> incorporando elementos da <br> pixação em uma narrativa <br> visual contemporânea.</h3>
-        </div>
-        <div class="lixomaniaart">
-            <img class="img1" src="src/img/image 4.png" alt="">          
-            <img class="img2" src="src/img/Rectangle 9.png" alt="">
-        </div>
-            <h3 class="coletivo">Coletivo “Lixomania (Zé) + OsGemeos”</h3>
-        <div class="osgemeos">
-            <h1 class="tittlegemeos">OS GÊMEOS</h1>
-            <img src="src/img/image 6.png" alt="">
-        </div>
+      <img
+        class="lixomaniapixo"
+        src="src/img/336845502_206250962045646_220132070252742342_n 1.png"
+        alt=""
+      />
+      <div class="description">
+        <h1 class="titulolixomania">LIXO MANIA (ZÉ)</h1>
+        <h3 class="descriçaolixomania">
+          atualmente lixomania fez uma <br />
+          exposição em colaboração <br />
+          com o cclapa <br />
+          A exposição, intitulada “35 <br />
+          anos de Lixomania”, apresenta <br />
+          um olhar aprofundado sobre <br />
+          essa trajetória, explorando <br />
+          minha evolucão, vivências, <br />
+          estilo e técnica. Estarão <br />
+          expostos quase 40 anos de <br />
+          imagens e arquivos, além de <br />
+          uma série de obras que <br />
+          capturam a essência crua <br />
+          dessa caminhada, <br />
+          incorporando elementos da <br />
+          pixação em uma narrativa <br />
+          visual contemporânea.
+        </h3>
+      </div>
+      <div class="lixomaniaart">
+        <img class="img1" src="src/img/image 4.png" alt="" />
+        <img class="img2" src="src/img/Rectangle 9.png" alt="" />
+      </div>
+      <h3 class="coletivo">Coletivo “Lixomania (Zé) + OsGemeos”</h3>
+      <div class="osgemeos">
+        <h1 class="tittlegemeos">OS GÊMEOS</h1>
+        <img src="src/img/image 6.png" alt="" />
+      </div>
     </main>
+  </body>
+</html>
