--- a/src/pages/artistas.html
+++ b/src/pages/artistas.html
@@ -14,14 +14,14 @@
     </header>
     <nav>
       <a href="../../index.html">Home</a>
-      <a href="">Exposições</a>
-      <a href="">Artistas</a>
+      <a href="">Exposicoes</a>
+      <a href="../pages/artistas.html">Artistas</a>
       <a href="">Contato</a>
     </nav>
     <main>
       <img
         class="lixomaniapixo"
-        src="src/img/336845502_206250962045646_220132070252742342_n 1.png"
+        src="../img/336845502_206250962045646_220132070252742342_n 1.png"
         alt=""
       />
       <div class="description">
@@ -47,14 +47,34 @@
         </h3>
       </div>
       <div class="lixomaniaart">
-        <img class="img1" src="src/img/image 4.png" alt="" />
-        <img class="img2" src="src/img/Rectangle 9.png" alt="" />
+        <img class="img1" src="../img/image 4.png" alt="" />
+        <img class="img2" src="../img/Rectangle 9.png" alt="" />
       </div>
       <h3 class="coletivo">Coletivo “Lixomania (Zé) + OsGemeos”</h3>
       <div class="osgemeos">
         <h1 class="tittlegemeos">OS GÊMEOS</h1>
-        <img src="src/img/image 6.png" alt="" />
+        <img src="../img/image 6.png" alt="" />
       </div>
+        <h3 class="descriptiongemeos">Os "Gêmeos" são dois artistas brasileiros famosos na cena do <br> grafite e da arte urbana. Seus nomes reais são Otávio e Gustavo <br> Pandolfo. Eles nasceram em 1974, em São Paulo, Brasil, e <br> começaram a se destacar na cena de arte de rua nas décadas de <br> 1980 e 1990.
+          <br> <br>
+          Os Gêmeos são conhecidos por seu estilo distintivo, que inclui <br> personagens e letras estilizadas que muitas vezes são <br> influenciadas pela cultura brasileira, incluindo elementos como a <br> cultura nordestina, a música, a mitologia e a fauna do Brasil. Eles <br> são conhecidos por suas obras coloridas e cheias de detalhes, <br> que frequentemente abordam questões sociais e culturais.  
+          </h3>
+          <img src="../img/image 5.png" alt="">
+          <img src="../img/image 7.png" alt="">
+          <img src="../img/image 8.png" alt="">
     </main>
+    <footer>
+    
+      <div class="sobre">
+        <a href="">Sobre</a>
+        <a href="">Contato</a>
+        <a href="">Fale Conosco</a>
+      </div>
+      <div class="icons">
+        <img class="whatsaap" src="../img/🦆 icon _What's App_.svg" alt="" />
+        <img class="iconinstagram" src="../img/🦆 icon _Instagram_.svg" alt="" />
+        <img class="iconface" src="../img/🦆 icon _Facebook Square_.svg" alt="" />
+      </div>
+    </footer>
   </body>
 </html>
